[tool.poetry]
name = "FullArchiveTwitterScraping"
version = "0.1.0"
description = "Test."
authors = ["kateryna"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.0.0"
pandas = "^1.3.3"
requests = "^2.26.0"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
